--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -3,17 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray"
+    android:theme="@style/Theme.AnToon.NoActionBar"
+    tools:ignore="HardcodedText, TextContrastCheck" >
 
     <TextView
-        android:id="@+id/text_1_ID"
+        android:id="@+id/main_activity_layout_welcome_text_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="text_1_ID"
-        android:textSize="24sp"
+        android:layout_marginTop="80dp"
+        android:text="AnToon"
+        android:textColor="@color/text_color"
+        android:textSize="42sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintVertical_bias="0.0"
+ />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/main_activity_layout_login_button_ID"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="220dp"
+        android:background="@drawable/circle_button_background"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="Login"
+        android:textColor="@color/darker_text_color"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_activity_layout_welcome_text_ID"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
