--- a/app/src/main/res/layout/home_activity_layout.xml
+++ b/app/src/main/res/layout/home_activity_layout.xml
@@ -2,41 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_activity_layout_ID"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
     android:theme="@style/Theme.AnToon.NoActionBar"
     tools:ignore="HardcodedText, TextContrastCheck">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/home_activity_layout_welcome_text_ID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/LargeTextAppearance"
         android:layout_marginTop="80dp"
-        android:text="AnToon"
-        android:textColor="@color/text_color"
-        android:textSize="42sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/home_activity_layout_welcome_text"
+        app:layout_constraintBottom_toBottomOf="@+id/home_activity_layout_ID"
+        app:layout_constraintEnd_toEndOf="@+id/home_activity_layout_ID"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/home_activity_layout_ID"
+        app:layout_constraintTop_toTopOf="@+id/home_activity_layout_ID"
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/home_activity_layout_login_button_ID"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
+        style="@style/MediumButtonAppearance"
         android:layout_marginBottom="220dp"
-        android:background="@drawable/circle_button_background"
-        android:gravity="center"
-        android:padding="4dp"
-        android:text="Login"
-        android:textColor="@color/darker_text_color"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/login_text"
+        app:layout_constraintBottom_toBottomOf="@+id/home_activity_layout_ID"
+        app:layout_constraintEnd_toEndOf="@+id/home_activity_layout_ID"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/home_activity_layout_ID"
         app:layout_constraintTop_toBottomOf="@+id/home_activity_layout_welcome_text_ID"
         app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
