--- a/app/src/main/res/layout/login_activity_layout.xml
+++ b/app/src/main/res/layout/login_activity_layout.xml
@@ -4,32 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
     android:theme="@style/Theme.AnToon.NoActionBar"
     tools:ignore="HardcodedText, TextContrastCheck, SpeakableTextPresentCheck">
 
     <EditText
         android:id="@+id/login_activity_layout_password_edit_text_ID"
-        android:layout_width="240dp"
-        android:layout_height="48dp"
+        style="@style/PasswordEditTextAppearance"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/light_ripple_edit_background"
-        android:gravity="center"
-        android:hint="Password:"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:paddingStart="14dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="14dp"
-        android:paddingBottom="4dp"
-        android:shadowColor="@color/transparent"
-        android:shadowDx="10"
-        android:shadowRadius="1"
-        android:singleLine="true"
-        android:textColor="@color/text_color"
-        android:textColorHint="@color/text_color"
-        android:textSize="22sp"
-        android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/login_activity_layout_login_button_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -39,26 +20,8 @@
 
     <EditText
         android:id="@+id/login_activity_layout_name_edit_text_ID"
-        android:layout_width="240dp"
-        android:layout_height="48dp"
+        style="@style/LoginEditTextAppearance"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/light_ripple_edit_background"
-        android:gravity="center"
-        android:hint="Name:"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:paddingStart="14dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="14dp"
-        android:paddingBottom="4dp"
-        android:shadowColor="@color/transparent"
-        android:shadowDx="10"
-        android:shadowRadius="1"
-        android:singleLine="true"
-        android:textColor="@color/text_color"
-        android:textColorHint="@color/text_color"
-        android:textSize="22sp"
-        android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/login_activity_layout_password_edit_text_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -68,15 +31,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_activity_layout_login_button_ID"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
+        style="@style/MediumButtonAppearance"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="220dp"
-        android:background="@drawable/circle_button_background"
-        android:gravity="center"
         android:text="Login"
-        android:textColor="@color/darker_text_color"
-        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -86,13 +44,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_activity_layout_back_button_ID"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_arrow_left"
-        android:foreground="@drawable/light_ripple_button_background"
-        android:gravity="center"
+        style="@style/BackButtonAppearance"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
