--- a/app/src/main/res/layout/login_register_activity_layout.xml
+++ b/app/src/main/res/layout/login_register_activity_layout.xml
@@ -4,18 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
     android:theme="@style/Theme.AnToon.NoActionBar"
     tools:ignore="HardcodedText, TextContrastCheck, SpeakableTextPresentCheck">
 
     <TextView
         android:id="@+id/login_register_activity_layout_text_ID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/MediumTextAppearance"
         android:layout_marginTop="80dp"
         android:text="login_message"
-        android:textColor="@color/text_color"
-        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,15 +20,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_register_activity_layout_register_button_ID"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
+        style="@style/MediumButtonAppearance"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="220dp"
-        android:background="@drawable/circle_button_background"
-        android:gravity="center"
         android:text="Register"
-        android:textColor="@color/darker_text_color"
-        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -42,15 +33,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_register_activity_layout_login_button_ID"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
+        style="@style/MediumButtonAppearance"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/circle_button_background"
-        android:gravity="center"
         android:text="Login"
-        android:textColor="@color/darker_text_color"
-        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/login_register_activity_layout_register_button_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -60,13 +46,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_register_layout_back_button_ID"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_arrow_left"
-        android:foreground="@drawable/light_ripple_button_background"
-        android:gravity="center"
+        style="@style/BackButtonAppearance"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
