--- a/app/src/main/res/values/button_styles.xml
+++ b/app/src/main/res/values/button_styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="SmallButtonAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:fontFamily">@font/airstrike</item>
+        <item name="android:fontFamily">@font/komtxtb</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">60dp</item>
         <item name="android:textSize">12sp</item>
@@ -13,7 +13,7 @@
     </style>
 
     <style name="MediumButtonAppearance" parent="TextAppearance.AppCompat">
-        <item name="fontFamily">@font/airstrike</item>
+        <item name="fontFamily">@font/komtxtb</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">120dp</item>
         <item name="android:textSize">20sp</item>
@@ -24,7 +24,6 @@
     </style>
 
     <style name="BackButtonAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:fontFamily">@font/airstrike</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">50dp</item>
         <item name="android:gravity">center</item>
