--- a/app/src/main/res/layout/main_page_acivity_layout.xml
+++ b/app/src/main/res/layout/main_page_acivity_layout.xml
@@ -19,16 +19,20 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/main_page_activity_layout_back_button_ID"
-        style="@style/MediumButtonAppearance"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="logout"
+        android:id="@+id/main_page_activity_layout_menu_button_ID"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="@drawable/ic_baseline_menu"
+        android:foreground="@drawable/light_ripple_button_background"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
