--- a/app/src/main/res/layout/login_register_activity_layout.xml
+++ b/app/src/main/res/layout/login_register_activity_layout.xml
@@ -7,24 +7,25 @@
     android:theme="@style/Theme.AnToon.NoActionBar"
     tools:ignore="HardcodedText, TextContrastCheck, SpeakableTextPresentCheck">
 
+
     <TextView
         android:id="@+id/login_register_activity_layout_text_ID"
         style="@style/MediumTextAppearance"
-        android:layout_marginTop="80dp"
+        android:layout_marginBottom="10dp"
         android:text="login_message"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/login_register_activity_layout_login_button_ID"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_register_activity_layout_register_button_ID"
         style="@style/MediumButtonAppearance"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="10dp"
         android:text="Register"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/login_register_activity_layout_text_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,15 +35,15 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_register_activity_layout_login_button_ID"
         style="@style/MediumButtonAppearance"
-        android:layout_marginTop="120dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="220dp"
         android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/login_register_activity_layout_register_button_ID"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_register_layout_back_button_ID"
