--- a/app/src/main/res/menu/user_pop_up_menu.xml
+++ b/app/src/main/res/menu/user_pop_up_menu.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/user_popup_menu_font_ID"
+        android:title="@string/pop_up_menu_font_text_string" />
+
+    <item
+        android:id="@+id/user_popup_menu_logout_ID"
+        android:title="@string/pop_up_menu_logout_text_string" />
 
 </menu>
