--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="MediumButtonWidth">120dp</dimen>
     <dimen name="SmallButtonHeight">48dp</dimen>
     <dimen name="SmallButtonWidth">60dp</dimen>
+    <dimen name="toolbarHeight">60dp</dimen>
 </resources>
