--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -3,7 +3,7 @@
 
     <style name="SmallTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:background">@color/transparent</item>
-        <item name="android:fontFamily">@font/komtxtb</item>
+        <item name="android:fontFamily">@font/komtxtb_sans</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textSize">12sp</item>
@@ -19,7 +19,7 @@
 
     <style name="MediumTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:background">@color/transparent</item>
-        <item name="android:fontFamily">@font/komtxtb</item>
+        <item name="android:fontFamily">@font/komtxtb_sans</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textSize">24sp</item>
@@ -35,7 +35,7 @@
 
     <style name="LargeTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:background">@color/transparent</item>
-        <item name="android:fontFamily">@font/komtxtb</item>
+        <item name="android:fontFamily">@font/komtxtb_sans</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textSize">46sp</item>
@@ -43,10 +43,18 @@
         <item name="singleLine">true</item>
         <item name="android:shadowColor">@color/transparent</item>
         <item name="android:shadowDx">22</item>
-        <item name="android:shadowRadius">1</item>`
+        <item name="android:shadowRadius">1</item>
         <item name="android:padding">4dp</item>
         <item name="android:paddingEnd">8dp</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="KalamTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/kalam_regular</item>
+    </style>
+
+    <style name="KomtxtbTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/komtxtb_sans</item>
     </style>
 
 </resources>
