--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="red">#D32F2F</color>
     <color name="darker_text_color">#D38B12</color>
     <color name="lil_darker_background_color">#393E47</color>
+    <color name="transparentGray">#80818181</color>
 </resources>
