--- a/app/src/main/res/layout/comics_card_view.xml
+++ b/app/src/main/res/layout/comics_card_view.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/comicsCardViewID"
+    android:id="@+id/comics_card_view_ID"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
-    app:cardBackgroundColor="@color/transparent">
+    app:cardBackgroundColor="@color/darker_background_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/comicsPictureID"
+            android:id="@+id/comics_picture_ID"
             android:layout_width="140dp"
             android:layout_height="240dp"
             android:background="@drawable/manhwa_pic"
@@ -25,7 +25,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/comicsNameID"
+            android:id="@+id/comics_name_ID"
             style="@style/SmallTextAppearance"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
@@ -36,10 +36,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/comicsPictureID" />
+            app:layout_constraintTop_toBottomOf="@+id/comics_picture_ID" />
 
         <TextView
-            android:id="@+id/chaptersCountID"
+            android:id="@+id/chapters_count_ID"
             style="@style/SmallTextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
