--- a/app/src/main/res/layout/comics_card_view.xml
+++ b/app/src/main/res/layout/comics_card_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/comics_card_view_ID"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
@@ -29,7 +28,7 @@
             style="@style/SmallTextAppearance"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:background="@color/transparent"
+            android:background="@color/black"
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:text="@string/comicsNameString"
@@ -39,7 +38,7 @@
             app:layout_constraintTop_toBottomOf="@+id/comics_picture_ID" />
 
         <TextView
-            android:id="@+id/chapters_count_ID"
+            android:id="@+id/newest_chapter_ID"
             style="@style/SmallTextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,10 +46,27 @@
             android:gravity="center"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
-            android:text="@string/chapterCount"
+            android:text="@string/newestChapter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/at_chapter_ID"
+            style="@style/SmallTextAppearance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/chapter_count_background"
+            android:gravity="center"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            android:text="@string/atChapter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
