--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="SmallButtonHeight">48dp</dimen>
     <dimen name="SmallButtonWidth">60dp</dimen>
     <dimen name="toolbarHeight">60dp</dimen>
+    <dimen name="comicsCardViewHeight">220dp</dimen>
+    <dimen name="comicsCardViewWidth">140dp</dimen>
+    <dimen name="iccDoubleArrowWidth">40dp</dimen>
+    <dimen name="iccDoubleArrowHeight">60dp</dimen>
 </resources>
