--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -12,9 +12,9 @@
         <item name="android:shadowColor">@color/transparent</item>
         <item name="android:shadowDx">22</item>
         <item name="android:shadowDy">22</item>
-        <item name="android:shadowRadius">1</item>`
+        <item name="android:shadowRadius">2</item>
         <item name="android:paddingStart">4dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingEnd">4dp</item>
         <item name="android:gravity">center</item>
     </style>
 
@@ -28,9 +28,9 @@
         <item name="singleLine">true</item>
         <item name="android:shadowColor">@color/transparent</item>
         <item name="android:shadowDx">22</item>
-        <item name="android:shadowRadius">1</item>`
+        <item name="android:shadowRadius">1</item>
         <item name="android:paddingStart">4dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingEnd">4dp</item>
         <item name="android:gravity">center</item>
     </style>
 
@@ -46,7 +46,7 @@
         <item name="android:shadowDx">22</item>
         <item name="android:shadowRadius">1</item>
         <item name="android:paddingStart">4dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingEnd">4dp</item>
         <item name="android:gravity">center</item>
     </style>
 
@@ -57,7 +57,7 @@
         <item name="android:shadowDx">22</item>
         <item name="android:shadowRadius">1</item>
         <item name="android:paddingStart">4dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingEnd">4dp</item>
         <item name="android:gravity">center</item>
     </style>
 
