--- a/app/src/main/res/layout/comics_card_view.xml
+++ b/app/src/main/res/layout/comics_card_view.xml
@@ -40,6 +40,7 @@
         <TextView
             android:id="@+id/newest_chapter_ID"
             style="@style/SmallTextAppearance"
+            android:layout_marginEnd="3dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
             android:background="@drawable/chapter_count_background"
