--- a/app/src/main/res/layout/user_page_acivity_layout.xml
+++ b/app/src/main/res/layout/user_page_acivity_layout.xml
@@ -64,7 +64,8 @@
         android:layout_width="@dimen/iccDoubleArrowWidth"
         android:layout_height="@dimen/iccDoubleArrowHeight"
         android:layout_marginTop="75dp"
-        android:background="@drawable/ic_double_arrow_left"
+        android:background="@drawable/recycler_arrow_background"
+        android:foreground="@drawable/ic_double_arrow_left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -77,7 +78,8 @@
         android:layout_width="@dimen/iccDoubleArrowWidth"
         android:layout_height="@dimen/iccDoubleArrowHeight"
         android:layout_marginTop="75dp"
-        android:background="@drawable/ic_double_arrow_right"
+        android:foreground="@drawable/ic_double_arrow_right"
+        android:background="@drawable/recycler_arrow_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
