--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="darker_text_color">#D38B12</color>
     <color name="lil_darker_background_color">#393E47</color>
     <color name="transparentGray">#80818181</color>
+    <color name="arrow_color">#99FFFFFF</color>
+    <color name="arrow_background_color">#33424242</color>
 </resources>
