--- a/app/src/main/res/drawable/card_view_foreground.xml
+++ b/app/src/main/res/drawable/card_view_foreground.xml
@@ -5,7 +5,7 @@
             <corners android:radius="0dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/white">
+                android:color="@color/black">
             </stroke>
         </shape>
     </item>
