--- a/app/src/main/res/layout/register_activity_layout.xml
+++ b/app/src/main/res/layout/register_activity_layout.xml
@@ -12,6 +12,7 @@
         style="@style/EmailEditTextAppearance"
         android:layout_marginBottom="20dp"
         android:background="@drawable/light_ripple_edit_background"
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toTopOf="@+id/register_activity_layout_password_edit_text_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -23,6 +24,7 @@
         android:id="@+id/register_activity_layout_password_edit_text_ID"
         style="@style/PasswordEditTextAppearance"
         android:layout_marginBottom="40dp"
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toTopOf="@+id/register_activity_layout_login_button_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -34,7 +36,7 @@
         android:id="@+id/register_activity_layout_name_edit_text_ID"
         style="@style/LoginEditTextAppearance"
         android:layout_marginBottom="20dp"
-
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toTopOf="@+id/register_activity_layout_email_edit_text_ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
