--- a/app/src/main/res/layout/comics_card_view_layout.xml
+++ b/app/src/main/res/layout/comics_card_view_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/comics_card_view_layout_ID"
     android:layout_width="@dimen/comicsCardViewWidth"
     android:layout_height="wrap_content"
     android:foreground="@drawable/card_view_foreground"
@@ -40,9 +41,9 @@
         <TextView
             android:id="@+id/newest_chapter_ID"
             style="@style/SmallTextAppearance"
-            android:layout_marginEnd="3dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
+            android:layout_marginEnd="3dp"
             android:background="@drawable/chapter_count_background"
             android:text="@string/newestChapter"
             app:layout_constraintBottom_toBottomOf="parent"
