--- a/app/src/main/res/values/button_styles.xml
+++ b/app/src/main/res/values/button_styles.xml
@@ -32,6 +32,21 @@
         <item name="android:foreground">@drawable/light_ripple_button_background</item>
         <item name="android:layout_marginStart">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="layout_constraintHorizontal_bias">0.0</item>
+        <item name="layout_constraintVertical_bias">1.0</item>
+    </style>
+
+    <style name="NextButtonAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">50dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:background">@drawable/ic_arrow_right</item>
+        <item name="android:foreground">@drawable/light_ripple_button_background</item>
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="layout_constraintHorizontal_bias">1.0</item>
+        <item name="layout_constraintVertical_bias">1.0</item>
     </style>
 
 </resources>
