--- a/app/src/main/res/layout/ccreation_second_page.xml
+++ b/app/src/main/res/layout/ccreation_second_page.xml
@@ -27,21 +27,22 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/set_comics_image_string"
         android:scaleType="fitXY"
-        app:srcCompat="@drawable/default_comics_pic"
+        app:srcCompat="@drawable/comics_default_image"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <TextView
-        android:background="@drawable/chapter_count_background"
+    <EditText
         android:id="@+id/ccreation_second_page_layout_text_ID"
         style="@style/MediumTextAppearance"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:background="@drawable/rectangle_gray_background"
+        android:foreground="@drawable/rectangle_black_foreground"
+        android:paddingStart="12dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="6dp"
         android:text="@string/set_comics_name_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
