--- a/app/src/main/res/layout/register_activity_layout.xml
+++ b/app/src/main/res/layout/register_activity_layout.xml
@@ -49,7 +49,7 @@
         style="@style/MediumButtonAppearance"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="220dp"
-        android:text="Register"
+        android:text="@string/register_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
